Apply theme to record list

--- a/src/components/CalorieRecordsSection/RecordList.module.css
+++ b/src/components/CalorieRecordsSection/RecordList.module.css
@@ -1,9 +1,13 @@
 .record-list {
   list-style: none;
   padding: 0;
-  border: 1px solid #ccc;
-  border-radius: 10px;
+  border: 1px solid var(--theme-color-light);
+  border-radius: 15px;
 }
 .list-Item {
-  margin: 10px;
+  margin: 1px solid var(--theme-color-normal);
+}
+
+.list-item:last-child {
+  border-bottom: none;
 }
