--- a/src/components/CalorieRecordsSection/CalorieRecord.module.css
+++ b/src/components/CalorieRecordsSection/CalorieRecord.module.css
@@ -1,19 +1,19 @@
 .record {
-  border: 1px solid #ccc;
-  border-radius: 3px;
   list-style: none;
   display: flex;
-  color: #666;
+  color: var(--theme-color-normal);
   justify-content: space-around;
   padding: 5px 0;
   height: 40px;
   align-items: center;
-  background-color: antiquewhite;
+  background-color: white;
   height: auto;
-  width: 100%;
+  width: 70%;
+  margin: auto;
+  max-width: 768px;
 }
 
 .record-calories {
-  color: #012367;
-  font-weight: bold;
+  color: var(--theme-color-dark);
+  font-weight: 400;
 }
