--- a/src/components/CalorieRecordsSection/RecordList.module.css
+++ b/src/components/CalorieRecordsSection/RecordList.module.css
@@ -4,7 +4,7 @@
   border: 1px solid var(--theme-color-light);
   border-radius: 15px;
 }
-.list-Item {
+.list-item {
   margin: 1px solid var(--theme-color-normal);
 }
 
