--- a/src/components/edit/CaloriesRecordEdit.module.css
+++ b/src/components/edit/CaloriesRecordEdit.module.css
@@ -1,9 +1,12 @@
+/* CaloriesRecordEdit.module.css */
+
 .form {
   background-color: var(--theme-background-ultralight);
   padding: 20px;
-  border-radius: 10px;
+  border-radius: var(--theme-border-radius-smooth);
   border: 1px solid var(--theme-background-normal);
   display: grid;
+  gap: 10px;
 }
 
 .form label {
@@ -20,16 +23,24 @@
   border-radius: 5px;
   width: 100%;
   min-width: 255px;
-  margin-bottom: 20px;
   font-size: 16px;
   display: block;
   box-sizing: border-box;
 }
 
-.calories-input.error {
+.error {
   border: 1px solid maroon;
   background-color: var(--theme-background-light);
   color: maroon;
+}
+
+.warning {
+  background: #ffcc00;
+  border-radius: var(--theme-border-radius-smooth);
+  height: 45px;
+  line-height: 45px;
+  text-align: center;
+  margin: 0;
 }
 
 .footer {
@@ -41,19 +52,20 @@
   background-color: var(--theme-color-normal);
   color: var(--theme-background-light);
   display: block;
-  border: 3px solid;
+  border: none;
   border-radius: 15px;
   padding: 10px;
   cursor: pointer;
   width: 200px;
 }
+
 .footer button.secondary {
   background-color: var(--theme-background-light);
   border: 1px solid var(--theme-background-normal);
   color: var(--theme-color-normal);
 }
 
-.footer button.disabled {
+.footer button:disabled {
   background-color: lightgray;
   border-width: 0;
   color: gray;
@@ -65,10 +77,12 @@
     grid-template-rows: repeat(2, 1fr) minmax(40px, auto);
     grid-template-columns: repeat(2, auto 1fr);
     column-gap: 1rem;
+    row-gap: 1rem;
   }
 
-  .footer {
-    grid-column: 1/-1;
+  .footer,
+  .warning {
+    grid-column: 1 / -1;
     justify-self: center;
     width: 100%;
   }
