--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@
 }
 
 body {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+}
+#root {
   max-width: 1024px;
   margin: auto;
   padding: 0 10px;
